lib_LIBRARIES = libstocktrading.a
libstocktrading_a_SOURCES = common/benchmark_common.c common/benchmark_common.h common/data_packet.c benchmark.h benchmark_initial_load.c benchmark_stocks.c benchmark_stocks.h populate_portfolios.c purchase_txn.c refresh_quotes.c sell_txn.c view_portfolio_txn.c view_stock_txn.c
include_HEADERS = benchmark.h
